--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,9 +126,12 @@ plan:
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - cd ./infrastructure/terraform
-    - terraform init -backend-config="key=staging"
-    - terraform plan -out ./tfplan.txt
+    - cd ./infrastructure
+    - ansible-playbook site.yml 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --tags "provision-conformity"
+    - terraform show ./terraform/plan.tfstate
+
   only:
     - branches
   except:
