--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,8 @@ plan:
   stage: review application
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   before_script:
+    - pip install --upgrade boto boto3
+    
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
