--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,15 +122,13 @@ plan:
   stage: review application
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   before_script:
-    - apk --no-cache add --update py-boto
-
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure
     - ansible-playbook site.yml 
-      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID' 'ansible_python_interpreter=/usr/local/bin/python'" 
       --tags "provision-conformity"
     - terraform show ./terraform/plan.tfstate
 
