--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,9 +50,23 @@ static_test_service:
   except:
     - triggers
 
+static_test_provision:
+  stage: test code
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
+  before_script:
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure/terraform
+    - terraform init -backend-config="key=$CI_PROJECT_NAME-$CI_BUILD_REF_NAME"
+    - terraform validate -check-variables=false
+  except:
+    - triggers
+
 build_application:
   stage: build application
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   before_script:
     - tower-cli config host $TOWER_CLI_HOST
     - tower-cli config username $TOWER_CLI_USERNAME
@@ -67,7 +81,7 @@ build_application:
       - ${PWD}/infrastructure/version.var
 
 .deploy: &deploy
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   script:
     - tower-cli config host $ENV_TOWER_CLI_HOST
     - tower-cli config username $ENV_TOWER_CLI_USERNAME
@@ -77,7 +91,7 @@ build_application:
 
     - tower-cli job launch 
         --job-template site-prov 
-        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
         --tags "provision,provision-core,setup-core" 
         --wait
     # - ansible-playbook site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
@@ -103,6 +117,30 @@ review:
     - branches
   except:
     - master
+
+plan:
+  stage: review application
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
+  before_script:
+    - pip3 install boto boto3
+
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure
+    - ansible-playbook site.yml 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --tags "provision-conformity"
+    - terraform show ./terraform/plan.tfstate
+
+  only:
+    - branches
+  except:
+    - master
+  artifacts:
+    paths:
+      - ${PWD}/infrastructure/terraform/plan.tfstate
 
 functional_test_service:
   stage: test application
@@ -190,7 +228,7 @@ functional_regression_test_staging:
     - triggers
 
 stop-staging:
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   stage: cleanup
   variables:
     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
@@ -198,6 +236,7 @@ stop-staging:
     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
     ENV_AWS_DEFAULT_REGION: "us-west-1"
     STACKNAME: $STACKNAME_STG
+    ENVIRONMENT: staging
   before_script:
     - tower-cli config host $ENV_TOWER_CLI_HOST
     - tower-cli config username $ENV_TOWER_CLI_USERNAME
@@ -206,7 +245,7 @@ stop-staging:
     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=staging cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
     # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
   environment:
@@ -218,7 +257,7 @@ stop-staging:
     - triggers
 
 stop-review:
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:3.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
   stage: cleanup
   variables:
     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
@@ -226,19 +265,20 @@ stop-review:
     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
     ENV_AWS_DEFAULT_REGION: "us-west-1"
     STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+    ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
   before_script:
     - tower-cli config host $ENV_TOWER_CLI_HOST
     - tower-cli config username $ENV_TOWER_CLI_USERNAME
     - tower-cli config password $ENV_TOWER_CLI_PASSWORD
     - tower-cli config verify_ssl false
 
-    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    # - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    # - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
 
-    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
+    # - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
   script:
     - cd ./infrastructure
-    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
     # - ansible-playbook site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
   environment:
