--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,8 @@ stages:
 # - build code
 - test code
 - build application
-- review application
 - test application
-- deploy
+- deploy application
 - regression test deploy
 - cleanup
 
@@ -80,68 +79,6 @@ build_application:
     paths:
       - ${PWD}/infrastructure/version.var
 
-.deploy: &deploy
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
-  script:
-    - tower-cli config host $ENV_TOWER_CLI_HOST
-    - tower-cli config username $ENV_TOWER_CLI_USERNAME
-    - tower-cli config password $ENV_TOWER_CLI_PASSWORD
-    - tower-cli config verify_ssl false
-    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
-
-    - tower-cli job launch 
-        --job-template site-prov 
-        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
-        --tags "provision,provision-core,setup-core" 
-        --wait
-    # - ansible-playbook site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-    #     --tags "provision,provision-core,setup-core" 
-    #     --wait
-
-review:
-  <<: *deploy
-  stage: review application
-  variables:
-    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
-    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
-    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
-    ENV_AWS_DEFAULT_REGION: "us-west-1"
-    STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
-    ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
-
-  environment:
-    name: $CI_BUILD_REF_NAME
-    # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
-    on_stop: stop-review
-  only:
-    - branches
-  except:
-    - master
-
-plan:
-  stage: review application
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
-  before_script:
-    - pip3 install boto boto3
-
-    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-    - export AWS_DEFAULT_REGION="us-west-1"
-  script:
-    - cd ./infrastructure
-    - ansible-playbook site.yml 
-      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-      --tags "provision-conformity"
-    - terraform show ./terraform/plan.tfstate
-
-  only:
-    - branches
-  except:
-    - master
-  artifacts:
-    paths:
-      - ${PWD}/infrastructure/terraform/plan.tfstate
-
 functional_test_service:
   stage: test application
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:4.0.0
@@ -174,9 +111,71 @@ functional_test_service:
   except:
     - triggers
 
+.deploy: &deploy
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
+  script:
+    - tower-cli config host $ENV_TOWER_CLI_HOST
+    - tower-cli config username $ENV_TOWER_CLI_USERNAME
+    - tower-cli config password $ENV_TOWER_CLI_PASSWORD
+    - tower-cli config verify_ssl false
+    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
+
+    - tower-cli job launch 
+        --job-template site-prov 
+        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+        --tags "provision,provision-core,setup-core" 
+        --wait
+    # - ansible-playbook site-prov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+    #     --tags "provision,provision-core,setup-core" 
+    #     --wait
+
+review:
+  <<: *deploy
+  stage: deploy application
+  variables:
+    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
+    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+    ENV_AWS_DEFAULT_REGION: "us-west-1"
+    STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+    ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+
+  environment:
+    name: $CI_BUILD_REF_NAME
+    # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
+    on_stop: stop-review
+  only:
+    - branches
+  except:
+    - master
+
+plan:
+  stage: deploy application
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:4.0.1
+  before_script:
+    - pip3 install boto boto3
+
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure
+    - ansible-playbook site.yml 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --tags "provision-conformity"
+    - terraform show ./terraform/plan.tfstate
+
+  only:
+    - branches
+  except:
+    - master
+  artifacts:
+    paths:
+      - ${PWD}/infrastructure/terraform/plan.tfstate
+
 deploy_staging:
   <<: *deploy
-  stage: review application
+  stage: deploy application
   variables:
     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
     ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
