--- a/infrastructure/site.yml
+++ b/infrastructure/site.yml
@@ -1,4 +1,5 @@
 ---
+- import_playbook: ./galaxy.yml
 - import_playbook: ./provision.yml
 - import_playbook: ./provision-core.yml
 - import_playbook: ./setup-core.yml
