--- a/infrastructure/site.yml
+++ b/infrastructure/site.yml
@@ -1,5 +1,6 @@
 ---
 - import_playbook: ./galaxy.yml
+- import_playbook: ./build.yml
 - import_playbook: ./provision.yml
 - import_playbook: ./provision-core.yml
 - import_playbook: ./setup-core.yml
