--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ build_application:
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_pipeline_id='$CI_PIPELINE_ID' cli_ci_commit_message='$CI_COMMIT_MESSAGE'" 
         --tags "build" 
@@ -101,6 +102,7 @@ build_application:
     #     --tags "provision,provision-core,setup-core" 
     #     --wait
     - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
         --tags "provision,provision-core,setup-core" 
@@ -136,6 +138,7 @@ plan:
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
         --tags "provision-conformity"
@@ -188,6 +191,7 @@ functional_regression_test_staging:
     #   --tags "provision,provision-test,setup-test" 
     #   --wait
     - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
       --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
       --tags "provision,provision-test,setup-test" 
@@ -199,6 +203,7 @@ functional_regression_test_staging:
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar $SUT_IP $TESTER_IP
 
     - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
       --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
       --tags "provision" 
@@ -229,6 +234,7 @@ stop-staging:
   script:
     - cd ./infrastructure
     # - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
@@ -262,6 +268,7 @@ stop-review:
   script:
     - cd ./infrastructure
     # - tower-cli job launch --job-template site-deprov --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
     - ansible-playbook site.yml 
         --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
   when: manual
