--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ build_application:
     # - tower-cli config password $TOWER_CLI_PASSWORD
     # - tower-cli config verify_ssl false
 
-    # - export ANSIBLE_HOST_KEY_CHECKING=False
+    - export ANSIBLE_HOST_KEY_CHECKING=False
     - chmod 400 ./infrastructure/hellowebui_key.pem
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
