--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,8 @@ static_test_service:
 
 static_test_provision:
   stage: test code
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   before_script:
     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
@@ -66,7 +67,8 @@ static_test_provision:
 
 build_application:
   stage: build application
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   before_script:
     - pip3 install boto boto3
 
@@ -82,7 +84,8 @@ build_application:
         --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_pipeline_id='$CI_PIPELINE_ID' cli_ci_commit_message='$CI_COMMIT_MESSAGE'" 
 
 .deploy: &deploy
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   script:
     - pip3 install boto boto3
 
@@ -120,7 +123,8 @@ review:
 
 plan:
   stage: review application
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   before_script:
     - pip3 install boto boto3
 
@@ -169,7 +173,7 @@ functional_regression_test_staging:
   stage: regression test deploy
   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   before_script:
-    # - pip3 install boto boto3
+    - pip3 install boto boto3
 
     - export ANSIBLE_HOST_KEY_CHECKING=False
     - chmod 400 ./infrastructure/hellowebui_key.pem
@@ -200,7 +204,8 @@ functional_regression_test_staging:
     - triggers
 
 stop-staging:
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   stage: review application
   variables:
     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
@@ -232,7 +237,8 @@ stop-staging:
     - triggers
 
 stop-review:
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  # image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:5.1.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode/maven:5.0.0
   stage: review application
   variables:
     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
