--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,10 +41,11 @@ variables:
 
 static_test_service:
   stage: test code
-  image: iagtech/ansible-lint:2.0.0-public
+  # image: iagtech/ansible-lint:2.0.0-public
   script:
-    - ansible-lint ./infrastructure/site.yml
-    - ansible-lint ./infrastructure/build.yml
+    - docker run --rm -v ${PWD}:/home/ansible-lint iagtech/ansible-lint:2.0.0-public ./infrastructure/site.yml
+    # - ansible-lint ./infrastructure/site.yml
+    # - ansible-lint ./infrastructure/build.yml
   except:
     - triggers
 
